k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: previews
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  ingressClassName: nginx
  # tls:
  #   - hosts:
  #       - *.previews.bene.dev
  #     secretName: hello-kubernetes-tls
  rules:
    - host: project1.previews.solidlabs.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: project1
                port:
                  number: 80
